# FRUSClaw

./: .env.example  .gitignore  AGENTS.md  README.md  frusclaw.sample.toml  pyproject.toml
frusclaw_agent/: __init__.py  actions.py  agent.py  config.py  formatters.py  models.py  providers.py  router.py  runner.py  runtime.py  scheduler.py  telegram.py  webchat.py
frusclaw_agent/channels/: __init__.py  base.py  telegram.py  whatsapp.py
frusclaw_cli/: __init__.py  main.py
frusclaw_indexer/: __init__.py  config.py  database.py  git_ops.py  indexer.py  parser.py  render.py  search.py
tests/: conftest.py  test_agent.py  test_cli.py  test_indexer.py
