[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frusclaw"
version = "0.1.0"
description = "Local-first research assistant for the FRUS series."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "lxml>=5.0.0,<6.0.0",
  "typer>=0.12.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
frusclaw = "frusclaw_cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["frusclaw_cli", "frusclaw_indexer"]
